[gd_scene load_steps=12 format=3 uid="uid://vvd22rotdh58"]

[ext_resource type="Script" path="res://addons/ui-anim-framework/gui/panel.gd" id="1_3prwa"]
[ext_resource type="PackedScene" uid="uid://biwldurwtmjmg" path="res://addons/ui-anim-framework/gui/components/scene_tool/scene_tool_interface.tscn" id="2_oomwt"]
[ext_resource type="PackedScene" uid="uid://hyumihdqymhl" path="res://addons/ui-anim-framework/gui/components/animations/animations_interface.tscn" id="3_gldxd"]
[ext_resource type="PackedScene" path="res://addons/ui-anim-framework/gui/components/settings/settings_interface.tscn" id="4_in8wj"]
[ext_resource type="PackedScene" path="res://addons/ui-anim-framework/gui/components/popup_panel.tscn" id="5_chn2x"]
[ext_resource type="Script" path="res://addons/ui-anim-framework/gui/components/settings/settings_button.gd" id="6_n0vm4"]
[ext_resource type="Texture2D" uid="uid://wawu4yd53kgs" path="res://addons/ui-anim-framework/gui/icons/tools/settings_icon.png" id="7_f45h2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5sm3n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q0kg1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1mym8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qpsfl"]

[node name="Motion Director" type="Control"]
clip_contents = true
custom_minimum_size = Vector2(0, 250)
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_3prwa")

[node name="MarginContainer" type="MarginContainer" parent="."]
clip_contents = true
custom_minimum_size = Vector2(0, 240)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/side_margin = -1
clip_tabs = false

[node name="SceneTool" parent="MarginContainer/TabContainer" instance=ExtResource("2_oomwt")]
layout_mode = 2

[node name="Animations" parent="MarginContainer/TabContainer" instance=ExtResource("3_gldxd")]
visible = false
layout_mode = 2

[node name="SettingsInterface" parent="MarginContainer" instance=ExtResource("4_in8wj")]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/margin_left = 4
theme_override_constants/margin_bottom = 8

[node name="SettingsButton" type="Button" parent="MarginContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_5sm3n")
theme_override_styles/hover = SubResource("StyleBoxEmpty_q0kg1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_1mym8")
theme_override_styles/focus = SubResource("StyleBoxEmpty_qpsfl")
icon = ExtResource("7_f45h2")
script = ExtResource("6_n0vm4")

[node name="PopupPanel" parent="." instance=ExtResource("5_chn2x")]
visible = false

[connection signal="tab_changed" from="MarginContainer/TabContainer" to="." method="_on_tab_container_tab_changed"]
[connection signal="settings_updated" from="MarginContainer/SettingsInterface" to="." method="_on_settings_interface_settings_updated"]
[connection signal="settings_toggle" from="MarginContainer/MarginContainer/SettingsButton" to="." method="_toggle_settings"]
[connection signal="popup_hide" from="PopupPanel" to="." method="_popup_closed"]
